--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fullcalendar/angular": "^6.1.8",
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
     "@ngrx/store": "^16.0.0",
     "@progress/kendo-angular-dateinputs": "^12.0.1",
     "@progress/kendo-angular-inputs": "^12.0.1",
